// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`drawRemainder > last day of Q1 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder">
            <clipPath id="remainder-clip"></clipPath>
            <path class="remainder" d="M419.529,19.875L149.832,7.098Z" fill="url(#remainder-pattern)" clip-path="url(#remainder-clip)" stroke="none"></path>
            <path class="remainder" d="M419.529,19.875L149.832,7.098Z" fill="url(#remainder-pattern-extra)" clip-path="url(#remainder-clip)" stroke="none"></path>
        </g>
    </g>
    <defs>
        <pattern id="remainder-pattern" width="73.6363636363" height="57.2727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <rect width="73.6363636363" height="57.2727272727" opacity="0.8" fill="rgb(213, 94, 0)"></rect>
        </pattern>
    </defs>
    <defs>
        <pattern id="remainder-pattern-extra" width="73.6363636363" height="57.2727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <text x="0" y="49.09" style="font-size: 60.00px" opacity="0.9" fill="black">
                0
            </text>
        </pattern>
    </defs>
</svg>"
`;

exports[`drawRemainder > last day of Q2 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder">
            <clipPath id="remainder-clip"></clipPath>
            <path class="remainder" d="M-18.069,419.611L-6.453,149.861Z" fill="url(#remainder-pattern)" clip-path="url(#remainder-clip)" stroke="none"></path>
            <path class="remainder" d="M-18.069,419.611L-6.453,149.861Z" fill="url(#remainder-pattern-extra)" clip-path="url(#remainder-clip)" stroke="none"></path>
        </g>
    </g>
    <defs>
        <pattern id="remainder-pattern" width="73.6363636363" height="57.2727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <rect width="73.6363636363" height="57.2727272727" opacity="0.8" fill="rgb(213, 94, 0)"></rect>
        </pattern>
    </defs>
    <defs>
        <pattern id="remainder-pattern-extra" width="73.6363636363" height="57.2727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <text x="0" y="49.09" style="font-size: 60.00px" opacity="0.9" fill="black">
                0
            </text>
        </pattern>
    </defs>
</svg>"
`;

exports[`drawRemainder > last day of Q3 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder">
            <clipPath id="remainder-clip"></clipPath>
            <path class="remainder" d="M-419.685,-16.263L-149.888,-5.808Z" fill="url(#remainder-pattern)" clip-path="url(#remainder-clip)" stroke="none"></path>
            <path class="remainder" d="M-419.685,-16.263L-149.888,-5.808Z" fill="url(#remainder-pattern-extra)" clip-path="url(#remainder-clip)" stroke="none"></path>
        </g>
    </g>
    <defs>
        <pattern id="remainder-pattern" width="73.6363636363" height="57.2727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <rect width="73.6363636363" height="57.2727272727" opacity="0.8" fill="rgb(213, 94, 0)"></rect>
        </pattern>
    </defs>
    <defs>
        <pattern id="remainder-pattern-extra" width="73.6363636363" height="57.2727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <text x="0" y="49.09" style="font-size: 60.00px" opacity="0.9" fill="black">
                0
            </text>
        </pattern>
    </defs>
</svg>"
`;

exports[`drawRemainder > last day of Q4 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder">
            <clipPath id="remainder-clip"></clipPath>
            <path class="remainder" d="M14.457,-419.751L5.163,-149.911Z" fill="url(#remainder-pattern)" clip-path="url(#remainder-clip)" stroke="none"></path>
            <path class="remainder" d="M14.457,-419.751L5.163,-149.911Z" fill="url(#remainder-pattern-extra)" clip-path="url(#remainder-clip)" stroke="none"></path>
        </g>
    </g>
    <defs>
        <pattern id="remainder-pattern" width="73.6363636363" height="57.2727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <rect width="73.6363636363" height="57.2727272727" opacity="0.8" fill="rgb(213, 94, 0)"></rect>
        </pattern>
    </defs>
    <defs>
        <pattern id="remainder-pattern-extra" width="73.6363636363" height="57.2727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <text x="0" y="49.09" style="font-size: 60.00px" opacity="0.9" fill="black">
                0
            </text>
        </pattern>
    </defs>
</svg>"
`;

exports[`drawRemainder > start of Q1 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder">
            <clipPath id="remainder-clip">
                <path d="M28.897,-419.005A420,420,0,0,1,36.105,-418.445L12.895,-149.445A150,150,0,0,0,10.32,-149.645Z" stroke="none"></path>
                <path d="M36.105,-418.445A420,420,0,0,1,43.303,-417.762L15.465,-149.201A150,150,0,0,0,12.895,-149.445Z" stroke="none"></path>
                <path d="M43.303,-417.762A420,420,0,0,1,50.487,-416.954L18.031,-148.912A150,150,0,0,0,15.465,-149.201Z" stroke="none"></path>
                <path d="M50.487,-416.954A420,420,0,0,1,57.657,-416.024L20.592,-148.58A150,150,0,0,0,18.031,-148.912Z" stroke="none"></path>
                <path d="M57.657,-416.024A420,420,0,0,1,64.81,-414.97L23.146,-148.203A150,150,0,0,0,20.592,-148.58Z" stroke="none"></path>
                <path d="M79.055,-412.493A420,420,0,0,1,86.144,-411.071L30.766,-146.811A150,150,0,0,0,28.234,-147.319Z" stroke="none"></path>
                <path d="M86.144,-411.071A420,420,0,0,1,93.207,-409.527L33.288,-146.26A150,150,0,0,0,30.766,-146.811Z" stroke="none"></path>
                <path d="M93.207,-409.527A420,420,0,0,1,100.243,-407.862L35.801,-145.665A150,150,0,0,0,33.288,-146.26Z" stroke="none"></path>
                <path d="M100.243,-407.862A420,420,0,0,1,107.248,-406.076L38.303,-145.027A150,150,0,0,0,35.801,-145.665Z" stroke="none"></path>
                <path d="M107.248,-406.076A420,420,0,0,1,114.222,-404.17L40.794,-144.346A150,150,0,0,0,38.303,-145.027Z" stroke="none"></path>
                <path d="M128.067,-399.999A420,420,0,0,1,134.933,-397.735L48.19,-142.048A150,150,0,0,0,45.738,-142.857Z" stroke="none"></path>
                <path d="M134.933,-397.735A420,420,0,0,1,141.76,-395.353L50.628,-141.198A150,150,0,0,0,48.19,-142.048Z" stroke="none"></path>
                <path d="M141.76,-395.353A420,420,0,0,1,148.544,-392.855L53.051,-140.305A150,150,0,0,0,50.628,-141.198Z" stroke="none"></path>
                <path d="M148.544,-392.855A420,420,0,0,1,155.284,-390.239L55.459,-139.371A150,150,0,0,0,53.051,-140.305Z" stroke="none"></path>
                <path d="M155.284,-390.239A420,420,0,0,1,161.979,-387.509L57.85,-138.396A150,150,0,0,0,55.459,-139.371Z" stroke="none"></path>
                <path d="M175.221,-381.703A420,420,0,0,1,181.766,-378.631L64.916,-135.225A150,150,0,0,0,62.579,-136.323Z" stroke="none"></path>
                <path d="M181.766,-378.631A420,420,0,0,1,188.256,-375.446L67.234,-134.088A150,150,0,0,0,64.916,-135.225Z" stroke="none"></path>
                <path d="M188.256,-375.446A420,420,0,0,1,194.691,-372.15L69.533,-132.911A150,150,0,0,0,67.234,-134.088Z" stroke="none"></path>
                <path d="M194.691,-372.15A420,420,0,0,1,201.068,-368.743L71.81,-131.694A150,150,0,0,0,69.533,-132.911Z" stroke="none"></path>
                <path d="M201.068,-368.743A420,420,0,0,1,207.386,-365.228L74.066,-130.438A150,150,0,0,0,71.81,-131.694Z" stroke="none"></path>
                <path d="M219.835,-357.873A420,420,0,0,1,225.962,-354.035L80.701,-126.441A150,150,0,0,0,78.512,-127.812Z" stroke="none"></path>
                <path d="M225.962,-354.035A420,420,0,0,1,232.023,-350.093L82.865,-125.033A150,150,0,0,0,80.701,-126.441Z" stroke="none"></path>
                <path d="M232.023,-350.093A420,420,0,0,1,238.015,-346.048L85.005,-123.588A150,150,0,0,0,82.865,-125.033Z" stroke="none"></path>
                <path d="M238.015,-346.048A420,420,0,0,1,243.936,-341.899L87.12,-122.107A150,150,0,0,0,85.005,-123.588Z" stroke="none"></path>
                <path d="M243.936,-341.899A420,420,0,0,1,249.785,-337.65L89.209,-120.589A150,150,0,0,0,87.12,-122.107Z" stroke="none"></path>
                <path d="M261.26,-328.852A420,420,0,0,1,266.882,-324.306L95.315,-115.823A150,150,0,0,0,93.307,-117.447Z" stroke="none"></path>
                <path d="M266.882,-324.306A420,420,0,0,1,272.424,-319.664L97.294,-114.166A150,150,0,0,0,95.315,-115.823Z" stroke="none"></path>
                <path d="M272.424,-319.664A420,420,0,0,1,277.887,-314.927L99.245,-112.474A150,150,0,0,0,97.294,-114.166Z" stroke="none"></path>
                <path d="M277.887,-314.927A420,420,0,0,1,283.266,-310.097L101.167,-110.749A150,150,0,0,0,99.245,-112.474Z" stroke="none"></path>
                <path d="M283.266,-310.097A420,420,0,0,1,288.562,-305.175L103.058,-108.991A150,150,0,0,0,101.167,-110.749Z" stroke="none"></path>
                <path d="M298.896,-295.062A420,420,0,0,1,303.93,-289.873L108.547,-103.526A150,150,0,0,0,106.748,-105.379Z" stroke="none"></path>
                <path d="M303.93,-289.873A420,420,0,0,1,308.875,-284.598L110.313,-101.642A150,150,0,0,0,108.547,-103.526Z" stroke="none"></path>
                <path d="M308.875,-284.598A420,420,0,0,1,313.728,-279.239L112.046,-99.728A150,150,0,0,0,110.313,-101.642Z" stroke="none"></path>
                <path d="M313.728,-279.239A420,420,0,0,1,318.488,-273.798L113.746,-97.785A150,150,0,0,0,112.046,-99.728Z" stroke="none"></path>
                <path d="M318.488,-273.798A420,420,0,0,1,323.154,-268.275L115.412,-95.812A150,150,0,0,0,113.746,-97.785Z" stroke="none"></path>
                <path d="M332.197,-256.992A420,420,0,0,1,336.572,-251.236L120.204,-89.727A150,150,0,0,0,118.642,-91.783Z" stroke="none"></path>
                <path d="M336.572,-251.236A420,420,0,0,1,340.846,-245.405L121.731,-87.645A150,150,0,0,0,120.204,-89.727Z" stroke="none"></path>
                <path d="M340.846,-245.405A420,420,0,0,1,345.02,-239.502L123.221,-85.536A150,150,0,0,0,121.731,-87.645Z" stroke="none"></path>
                <path d="M345.02,-239.502A420,420,0,0,1,349.092,-233.527L124.676,-83.403A150,150,0,0,0,123.221,-85.536Z" stroke="none"></path>
                <path d="M349.092,-233.527A420,420,0,0,1,353.06,-227.484L126.093,-81.244A150,150,0,0,0,124.676,-83.403Z" stroke="none"></path>
                <path d="M360.681,-215.196A420,420,0,0,1,364.332,-208.956L130.118,-74.627A150,150,0,0,0,128.815,-76.856Z" stroke="none"></path>
                <path d="M364.332,-208.956A420,420,0,0,1,367.875,-202.653L131.384,-72.376A150,150,0,0,0,130.118,-74.627Z" stroke="none"></path>
                <path d="M367.875,-202.653A420,420,0,0,1,371.308,-196.291L132.61,-70.104A150,150,0,0,0,131.384,-72.376Z" stroke="none"></path>
                <path d="M371.308,-196.291A420,420,0,0,1,374.632,-189.87L133.797,-67.811A150,150,0,0,0,132.61,-70.104Z" stroke="none"></path>
                <path d="M374.632,-189.87A420,420,0,0,1,377.845,-183.394L134.945,-65.498A150,150,0,0,0,133.797,-67.811Z" stroke="none"></path>
                <path d="M383.934,-170.279A420,420,0,0,1,386.808,-163.645L138.146,-58.445A150,150,0,0,0,137.119,-60.814Z" stroke="none"></path>
                <path d="M386.808,-163.645A420,420,0,0,1,389.568,-156.962L139.131,-56.058A150,150,0,0,0,138.146,-58.445Z" stroke="none"></path>
                <path d="M389.568,-156.962A420,420,0,0,1,392.212,-150.233L140.076,-53.655A150,150,0,0,0,139.131,-56.058Z" stroke="none"></path>
                <path d="M392.212,-150.233A420,420,0,0,1,394.74,-143.46L140.978,-51.236A150,150,0,0,0,140.076,-53.655Z" stroke="none"></path>
                <path d="M394.74,-143.46A420,420,0,0,1,397.15,-136.644L141.839,-48.801A150,150,0,0,0,140.978,-51.236Z" stroke="none"></path>
                <path d="M401.619,-122.892A420,420,0,0,1,403.675,-115.961L144.169,-41.415A150,150,0,0,0,143.435,-43.89Z" stroke="none"></path>
                <path d="M403.675,-115.961A420,420,0,0,1,405.611,-108.995L144.861,-38.927A150,150,0,0,0,144.169,-41.415Z" stroke="none"></path>
                <path d="M405.611,-108.995A420,420,0,0,1,407.427,-101.997L145.51,-36.427A150,150,0,0,0,144.861,-38.927Z" stroke="none"></path>
                <path d="M407.427,-101.997A420,420,0,0,1,409.122,-94.969L146.115,-33.917A150,150,0,0,0,145.51,-36.427Z" stroke="none"></path>
                <path d="M409.122,-94.969A420,420,0,0,1,410.696,-87.912L146.677,-31.397A150,150,0,0,0,146.115,-33.917Z" stroke="none"></path>
                <path d="M413.479,-73.723A420,420,0,0,1,414.687,-66.595L148.102,-23.784A150,150,0,0,0,147.671,-26.33Z" stroke="none"></path>
                <path d="M414.687,-66.595A420,420,0,0,1,415.772,-59.447L148.49,-21.231A150,150,0,0,0,148.102,-23.784Z" stroke="none"></path>
                <path d="M415.772,-59.447A420,420,0,0,1,416.733,-52.281L148.833,-18.672A150,150,0,0,0,148.49,-21.231Z" stroke="none"></path>
                <path d="M416.733,-52.281A420,420,0,0,1,417.572,-45.1L149.133,-16.107A150,150,0,0,0,148.833,-18.672Z" stroke="none"></path>
                <path d="M417.572,-45.1A420,420,0,0,1,418.286,-37.906L149.388,-13.538A150,150,0,0,0,149.133,-16.107Z" stroke="none"></path>
            </clipPath>
            <path class="remainder" d="M21.68,-419.44A420,420,0,0,1,418.876,-30.7L149.599,-10.964A150,150,0,0,0,7.743,-149.8Z" fill="url(#remainder-pattern)" clip-path="url(#remainder-clip)" stroke="none"></path>
            <path class="remainder" d="M21.68,-419.44A420,420,0,0,1,418.876,-30.7L149.599,-10.964A150,150,0,0,0,7.743,-149.8Z" fill="url(#remainder-pattern-extra)" clip-path="url(#remainder-clip)" stroke="none"></path>
        </g>
    </g>
    <defs>
        <pattern id="remainder-pattern" width="73.6363636363" height="57.2727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <rect width="73.6363636363" height="57.2727272727" opacity="0.8" fill="rgb(213, 94, 0)"></rect>
        </pattern>
    </defs>
    <defs>
        <pattern id="remainder-pattern-extra" width="73.6363636363" height="57.2727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <text x="0" y="49.09" style="font-size: 60.00px" opacity="0.9" fill="black">
                12
            </text>
        </pattern>
    </defs>
</svg>"
`;

exports[`drawRemainder > start of Q2 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder">
            <clipPath id="remainder-clip">
                <path d="M419.125,27.094A420,420,0,0,1,418.597,34.304L149.499,12.251A150,150,0,0,0,149.688,9.676Z" stroke="none"></path>
                <path d="M418.597,34.304A420,420,0,0,1,417.944,41.504L149.266,14.823A150,150,0,0,0,149.499,12.251Z" stroke="none"></path>
                <path d="M417.944,41.504A420,420,0,0,1,417.168,48.693L148.989,17.39A150,150,0,0,0,149.266,14.823Z" stroke="none"></path>
                <path d="M417.168,48.693A420,420,0,0,1,416.268,55.866L148.667,19.952A150,150,0,0,0,148.989,17.39Z" stroke="none"></path>
                <path d="M416.268,55.866A420,420,0,0,1,415.245,63.023L148.302,22.508A150,150,0,0,0,148.667,19.952Z" stroke="none"></path>
                <path d="M412.829,77.279A420,420,0,0,1,411.438,84.374L146.942,30.134A150,150,0,0,0,147.439,27.6Z" stroke="none"></path>
                <path d="M411.438,84.374A420,420,0,0,1,409.924,91.444L146.402,32.658A150,150,0,0,0,146.942,30.134Z" stroke="none"></path>
                <path d="M409.924,91.444A420,420,0,0,1,408.29,98.486L145.818,35.174A150,150,0,0,0,146.402,32.658Z" stroke="none"></path>
                <path d="M408.29,98.486A420,420,0,0,1,406.534,105.5L145.191,37.679A150,150,0,0,0,145.818,35.174Z" stroke="none"></path>
                <path d="M406.534,105.5A420,420,0,0,1,404.658,112.482L144.521,40.172A150,150,0,0,0,145.191,37.679Z" stroke="none"></path>
                <path d="M400.546,126.344A420,420,0,0,1,398.312,133.22L142.254,47.579A150,150,0,0,0,143.052,45.123Z" stroke="none"></path>
                <path d="M398.312,133.22A420,420,0,0,1,395.96,140.057L141.414,50.02A150,150,0,0,0,142.254,47.579Z" stroke="none"></path>
                <path d="M395.96,140.057A420,420,0,0,1,393.49,146.852L140.532,52.447A150,150,0,0,0,141.414,50.02Z" stroke="none"></path>
                <path d="M393.49,146.852A420,420,0,0,1,390.904,153.603L139.609,54.858A150,150,0,0,0,140.532,52.447Z" stroke="none"></path>
                <path d="M390.904,153.603A420,420,0,0,1,388.202,160.309L138.644,57.253A150,150,0,0,0,139.609,54.858Z" stroke="none"></path>
                <path d="M382.454,173.577A420,420,0,0,1,379.409,180.135L135.503,64.334A150,150,0,0,0,136.591,61.992Z" stroke="none"></path>
                <path d="M379.409,180.135A420,420,0,0,1,376.253,186.639L134.376,66.657A150,150,0,0,0,135.503,64.334Z" stroke="none"></path>
                <path d="M376.253,186.639A420,420,0,0,1,372.984,193.088L133.209,68.96A150,150,0,0,0,134.376,66.657Z" stroke="none"></path>
                <path d="M372.984,193.088A420,420,0,0,1,369.605,199.479L132.002,71.243A150,150,0,0,0,133.209,68.96Z" stroke="none"></path>
                <path d="M369.605,199.479A420,420,0,0,1,366.117,205.812L130.756,73.504A150,150,0,0,0,132.002,71.243Z" stroke="none"></path>
                <path d="M358.815,218.292A420,420,0,0,1,355.005,224.436L126.787,80.156A150,150,0,0,0,128.148,77.962Z" stroke="none"></path>
                <path d="M355.005,224.436A420,420,0,0,1,351.089,230.514L125.389,82.326A150,150,0,0,0,126.787,80.156Z" stroke="none"></path>
                <path d="M351.089,230.514A420,420,0,0,1,347.069,236.523L123.953,84.473A150,150,0,0,0,125.389,82.326Z" stroke="none"></path>
                <path d="M347.069,236.523A420,420,0,0,1,342.946,242.462L122.481,86.594A150,150,0,0,0,123.953,84.473Z" stroke="none"></path>
                <path d="M342.946,242.462A420,420,0,0,1,338.722,248.33L120.972,88.689A150,150,0,0,0,122.481,86.594Z" stroke="none"></path>
                <path d="M329.973,259.842A420,420,0,0,1,325.451,265.483L116.233,94.816A150,150,0,0,0,117.847,92.801Z" stroke="none"></path>
                <path d="M325.451,265.483A420,420,0,0,1,320.833,271.046L114.583,96.802A150,150,0,0,0,116.233,94.816Z" stroke="none"></path>
                <path d="M320.833,271.046A420,420,0,0,1,316.12,276.529L112.9,98.76A150,150,0,0,0,114.583,96.802Z" stroke="none"></path>
                <path d="M316.12,276.529A420,420,0,0,1,311.313,281.929L111.183,100.689A150,150,0,0,0,112.9,98.76Z" stroke="none"></path>
                <path d="M311.313,281.929A420,420,0,0,1,306.414,287.246L109.434,102.588A150,150,0,0,0,111.183,100.689Z" stroke="none"></path>
                <path d="M296.345,297.623A420,420,0,0,1,291.178,302.68L103.992,108.1A150,150,0,0,0,105.838,106.294Z" stroke="none"></path>
                <path d="M291.178,302.68A420,420,0,0,1,285.925,307.648L102.116,109.874A150,150,0,0,0,103.992,108.1Z" stroke="none"></path>
                <path d="M285.925,307.648A420,420,0,0,1,280.587,312.524L100.21,111.616A150,150,0,0,0,102.116,109.874Z" stroke="none"></path>
                <path d="M280.587,312.524A420,420,0,0,1,275.166,317.307L98.273,113.324A150,150,0,0,0,100.21,111.616Z" stroke="none"></path>
                <path d="M275.166,317.307A420,420,0,0,1,269.663,321.997L96.308,114.999A150,150,0,0,0,98.273,113.324Z" stroke="none"></path>
                <path d="M258.42,331.088A420,420,0,0,1,252.682,335.487L90.244,119.817A150,150,0,0,0,92.293,118.246Z" stroke="none"></path>
                <path d="M252.682,335.487A420,420,0,0,1,246.87,339.787L88.168,121.353A150,150,0,0,0,90.244,119.817Z" stroke="none"></path>
                <path d="M246.87,339.787A420,420,0,0,1,240.984,343.986L86.066,122.852A150,150,0,0,0,88.168,121.353Z" stroke="none"></path>
                <path d="M240.984,343.986A420,420,0,0,1,235.027,348.083L83.938,124.316A150,150,0,0,0,86.066,122.852Z" stroke="none"></path>
                <path d="M235.027,348.083A420,420,0,0,1,229.001,352.077L81.786,125.742A150,150,0,0,0,83.938,124.316Z" stroke="none"></path>
                <path d="M216.746,359.751A420,420,0,0,1,210.522,363.429L75.186,129.796A150,150,0,0,0,77.409,128.483Z" stroke="none"></path>
                <path d="M210.522,363.429A420,420,0,0,1,204.235,366.999L72.941,131.071A150,150,0,0,0,75.186,129.796Z" stroke="none"></path>
                <path d="M204.235,366.999A420,420,0,0,1,197.887,370.46L70.674,132.307A150,150,0,0,0,72.941,131.071Z" stroke="none"></path>
                <path d="M197.887,370.46A420,420,0,0,1,191.481,373.812L68.386,133.504A150,150,0,0,0,70.674,132.307Z" stroke="none"></path>
                <path d="M191.481,373.812A420,420,0,0,1,185.018,377.052L66.078,134.662A150,150,0,0,0,68.386,133.504Z" stroke="none"></path>
                <path d="M171.93,383.197A420,420,0,0,1,165.308,386.1L59.039,137.893A150,150,0,0,0,61.403,136.856Z" stroke="none"></path>
                <path d="M165.308,386.1A420,420,0,0,1,158.637,388.888L56.656,138.889A150,150,0,0,0,59.039,137.893Z" stroke="none"></path>
                <path d="M158.637,388.888A420,420,0,0,1,151.92,391.561L54.257,139.843A150,150,0,0,0,56.656,138.889Z" stroke="none"></path>
                <path d="M151.92,391.561A420,420,0,0,1,145.157,394.119L51.842,140.757A150,150,0,0,0,54.257,139.843Z" stroke="none"></path>
                <path d="M145.157,394.119A420,420,0,0,1,138.352,396.559L49.411,141.628A150,150,0,0,0,51.842,140.757Z" stroke="none"></path>
                <path d="M124.619,401.086A420,420,0,0,1,117.697,403.172L42.035,143.99A150,150,0,0,0,44.507,143.245Z" stroke="none"></path>
                <path d="M117.697,403.172A420,420,0,0,1,110.74,405.138L39.55,144.692A150,150,0,0,0,42.035,143.99Z" stroke="none"></path>
                <path d="M110.74,405.138A420,420,0,0,1,103.749,406.984L37.053,145.351A150,150,0,0,0,39.55,144.692Z" stroke="none"></path>
                <path d="M103.749,406.984A420,420,0,0,1,96.728,408.71L34.546,145.968A150,150,0,0,0,37.053,145.351Z" stroke="none"></path>
                <path d="M96.728,408.71A420,420,0,0,1,89.679,410.314L32.028,146.541A150,150,0,0,0,34.546,145.968Z" stroke="none"></path>
                <path d="M75.502,413.158A420,420,0,0,1,68.379,414.396L24.421,147.999A150,150,0,0,0,26.965,147.556Z" stroke="none"></path>
                <path d="M68.379,414.396A420,420,0,0,1,61.236,415.512L21.87,148.397A150,150,0,0,0,24.421,147.999Z" stroke="none"></path>
                <path d="M61.236,415.512A420,420,0,0,1,54.074,416.504L19.312,148.752A150,150,0,0,0,21.87,148.397Z" stroke="none"></path>
                <path d="M54.074,416.504A420,420,0,0,1,46.897,417.374L16.749,149.062A150,150,0,0,0,19.312,148.752Z" stroke="none"></path>
                <path d="M46.897,417.374A420,420,0,0,1,39.705,418.119L14.181,149.328A150,150,0,0,0,16.749,149.062Z" stroke="none"></path>
            </clipPath>
            <path class="remainder" d="M419.529,19.875A420,420,0,0,1,32.502,418.74L11.608,149.55A150,150,0,0,0,149.832,7.098Z" fill="url(#remainder-pattern)" clip-path="url(#remainder-clip)" stroke="none"></path>
            <path class="remainder" d="M419.529,19.875A420,420,0,0,1,32.502,418.74L11.608,149.55A150,150,0,0,0,149.832,7.098Z" fill="url(#remainder-pattern-extra)" clip-path="url(#remainder-clip)" stroke="none"></path>
        </g>
    </g>
    <defs>
        <pattern id="remainder-pattern" width="73.6363636363" height="57.2727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <rect width="73.6363636363" height="57.2727272727" opacity="0.8" fill="rgb(213, 94, 0)"></rect>
        </pattern>
    </defs>
    <defs>
        <pattern id="remainder-pattern-extra" width="73.6363636363" height="57.2727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <text x="0" y="49.09" style="font-size: 60.00px" opacity="0.9" fill="black">
                12
            </text>
        </pattern>
    </defs>
</svg>"
`;

exports[`drawRemainder > start of Q3 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder">
            <clipPath id="remainder-clip">
                <path d="M-25.29,419.238A420,420,0,0,1,-32.502,418.74L-11.608,149.55A150,150,0,0,0,-9.032,149.728Z" stroke="none"></path>
                <path d="M-32.502,418.74A420,420,0,0,1,-39.705,418.119L-14.181,149.328A150,150,0,0,0,-11.608,149.55Z" stroke="none"></path>
                <path d="M-39.705,418.119A420,420,0,0,1,-46.897,417.374L-16.749,149.062A150,150,0,0,0,-14.181,149.328Z" stroke="none"></path>
                <path d="M-46.897,417.374A420,420,0,0,1,-54.074,416.504L-19.312,148.752A150,150,0,0,0,-16.749,149.062Z" stroke="none"></path>
                <path d="M-54.074,416.504A420,420,0,0,1,-61.236,415.512L-21.87,148.397A150,150,0,0,0,-19.312,148.752Z" stroke="none"></path>
                <path d="M-75.502,413.158A420,420,0,0,1,-82.603,411.797L-29.501,147.07A150,150,0,0,0,-26.965,147.556Z" stroke="none"></path>
                <path d="M-82.603,411.797A420,420,0,0,1,-89.679,410.314L-32.028,146.541A150,150,0,0,0,-29.501,147.07Z" stroke="none"></path>
                <path d="M-89.679,410.314A420,420,0,0,1,-96.728,408.71L-34.546,145.968A150,150,0,0,0,-32.028,146.541Z" stroke="none"></path>
                <path d="M-96.728,408.71A420,420,0,0,1,-103.749,406.984L-37.053,145.351A150,150,0,0,0,-34.546,145.968Z" stroke="none"></path>
                <path d="M-103.749,406.984A420,420,0,0,1,-110.74,405.138L-39.55,144.692A150,150,0,0,0,-37.053,145.351Z" stroke="none"></path>
                <path d="M-124.619,401.086A420,420,0,0,1,-131.505,398.881L-46.966,142.458A150,150,0,0,0,-44.507,143.245Z" stroke="none"></path>
                <path d="M-131.505,398.881A420,420,0,0,1,-138.352,396.559L-49.411,141.628A150,150,0,0,0,-46.966,142.458Z" stroke="none"></path>
                <path d="M-138.352,396.559A420,420,0,0,1,-145.157,394.119L-51.842,140.757A150,150,0,0,0,-49.411,141.628Z" stroke="none"></path>
                <path d="M-145.157,394.119A420,420,0,0,1,-151.92,391.561L-54.257,139.843A150,150,0,0,0,-51.842,140.757Z" stroke="none"></path>
                <path d="M-151.92,391.561A420,420,0,0,1,-158.637,388.888L-56.656,138.889A150,150,0,0,0,-54.257,139.843Z" stroke="none"></path>
                <path d="M-171.93,383.197A420,420,0,0,1,-178.5,380.181L-63.75,135.779A150,150,0,0,0,-61.403,136.856Z" stroke="none"></path>
                <path d="M-178.5,380.181A420,420,0,0,1,-185.018,377.052L-66.078,134.662A150,150,0,0,0,-63.75,135.779Z" stroke="none"></path>
                <path d="M-185.018,377.052A420,420,0,0,1,-191.481,373.812L-68.386,133.504A150,150,0,0,0,-66.078,134.662Z" stroke="none"></path>
                <path d="M-191.481,373.812A420,420,0,0,1,-197.887,370.46L-70.674,132.307A150,150,0,0,0,-68.386,133.504Z" stroke="none"></path>
                <path d="M-197.887,370.46A420,420,0,0,1,-204.235,366.999L-72.941,131.071A150,150,0,0,0,-70.674,132.307Z" stroke="none"></path>
                <path d="M-216.746,359.751A420,420,0,0,1,-222.907,355.967L-79.61,127.131A150,150,0,0,0,-77.409,128.483Z" stroke="none"></path>
                <path d="M-222.907,355.967A420,420,0,0,1,-229.001,352.077L-81.786,125.742A150,150,0,0,0,-79.61,127.131Z" stroke="none"></path>
                <path d="M-229.001,352.077A420,420,0,0,1,-235.027,348.083L-83.938,124.316A150,150,0,0,0,-81.786,125.742Z" stroke="none"></path>
                <path d="M-235.027,348.083A420,420,0,0,1,-240.984,343.986L-86.066,122.852A150,150,0,0,0,-83.938,124.316Z" stroke="none"></path>
                <path d="M-240.984,343.986A420,420,0,0,1,-246.87,339.787L-88.168,121.353A150,150,0,0,0,-86.066,122.852Z" stroke="none"></path>
                <path d="M-258.42,331.088A420,420,0,0,1,-264.08,326.591L-94.314,116.64A150,150,0,0,0,-92.293,118.246Z" stroke="none"></path>
                <path d="M-264.08,326.591A420,420,0,0,1,-269.663,321.997L-96.308,114.999A150,150,0,0,0,-94.314,116.64Z" stroke="none"></path>
                <path d="M-269.663,321.997A420,420,0,0,1,-275.166,317.307L-98.273,113.324A150,150,0,0,0,-96.308,114.999Z" stroke="none"></path>
                <path d="M-275.166,317.307A420,420,0,0,1,-280.587,312.524L-100.21,111.616A150,150,0,0,0,-98.273,113.324Z" stroke="none"></path>
                <path d="M-280.587,312.524A420,420,0,0,1,-285.925,307.648L-102.116,109.874A150,150,0,0,0,-100.21,111.616Z" stroke="none"></path>
                <path d="M-296.345,297.623A420,420,0,0,1,-301.424,292.478L-107.652,104.456A150,150,0,0,0,-105.838,106.294Z" stroke="none"></path>
                <path d="M-301.424,292.478A420,420,0,0,1,-306.414,287.246L-109.434,102.588A150,150,0,0,0,-107.652,104.456Z" stroke="none"></path>
                <path d="M-306.414,287.246A420,420,0,0,1,-311.313,281.929L-111.183,100.689A150,150,0,0,0,-109.434,102.588Z" stroke="none"></path>
                <path d="M-311.313,281.929A420,420,0,0,1,-316.12,276.529L-112.9,98.76A150,150,0,0,0,-111.183,100.689Z" stroke="none"></path>
                <path d="M-316.12,276.529A420,420,0,0,1,-320.833,271.046L-114.583,96.802A150,150,0,0,0,-112.9,98.76Z" stroke="none"></path>
                <path d="M-329.973,259.842A420,420,0,0,1,-334.397,254.124L-119.427,90.758A150,150,0,0,0,-117.847,92.801Z" stroke="none"></path>
                <path d="M-334.397,254.124A420,420,0,0,1,-338.722,248.33L-120.972,88.689A150,150,0,0,0,-119.427,90.758Z" stroke="none"></path>
                <path d="M-338.722,248.33A420,420,0,0,1,-342.946,242.462L-122.481,86.594A150,150,0,0,0,-120.972,88.689Z" stroke="none"></path>
                <path d="M-342.946,242.462A420,420,0,0,1,-347.069,236.523L-123.953,84.473A150,150,0,0,0,-122.481,86.594Z" stroke="none"></path>
                <path d="M-347.069,236.523A420,420,0,0,1,-351.089,230.514L-125.389,82.326A150,150,0,0,0,-123.953,84.473Z" stroke="none"></path>
                <path d="M-358.815,218.292A420,420,0,0,1,-362.52,212.084L-129.471,75.744A150,150,0,0,0,-128.148,77.962Z" stroke="none"></path>
                <path d="M-362.52,212.084A420,420,0,0,1,-366.117,205.812L-130.756,73.504A150,150,0,0,0,-129.471,75.744Z" stroke="none"></path>
                <path d="M-366.117,205.812A420,420,0,0,1,-369.605,199.479L-132.002,71.243A150,150,0,0,0,-130.756,73.504Z" stroke="none"></path>
                <path d="M-369.605,199.479A420,420,0,0,1,-372.984,193.088L-133.209,68.96A150,150,0,0,0,-132.002,71.243Z" stroke="none"></path>
                <path d="M-372.984,193.088A420,420,0,0,1,-376.253,186.639L-134.376,66.657A150,150,0,0,0,-133.209,68.96Z" stroke="none"></path>
                <path d="M-382.454,173.577A420,420,0,0,1,-385.385,166.968L-137.638,59.631A150,150,0,0,0,-136.591,61.992Z" stroke="none"></path>
                <path d="M-385.385,166.968A420,420,0,0,1,-388.202,160.309L-138.644,57.253A150,150,0,0,0,-137.638,59.631Z" stroke="none"></path>
                <path d="M-388.202,160.309A420,420,0,0,1,-390.904,153.603L-139.609,54.858A150,150,0,0,0,-138.644,57.253Z" stroke="none"></path>
                <path d="M-390.904,153.603A420,420,0,0,1,-393.49,146.852L-140.532,52.447A150,150,0,0,0,-139.609,54.858Z" stroke="none"></path>
                <path d="M-393.49,146.852A420,420,0,0,1,-395.96,140.057L-141.414,50.02A150,150,0,0,0,-140.532,52.447Z" stroke="none"></path>
                <path d="M-400.546,126.344A420,420,0,0,1,-402.661,119.431L-143.808,42.654A150,150,0,0,0,-143.052,45.123Z" stroke="none"></path>
                <path d="M-402.661,119.431A420,420,0,0,1,-404.658,112.482L-144.521,40.172A150,150,0,0,0,-143.808,42.654Z" stroke="none"></path>
                <path d="M-404.658,112.482A420,420,0,0,1,-406.534,105.5L-145.191,37.679A150,150,0,0,0,-144.521,40.172Z" stroke="none"></path>
                <path d="M-406.534,105.5A420,420,0,0,1,-408.29,98.486L-145.818,35.174A150,150,0,0,0,-145.191,37.679Z" stroke="none"></path>
                <path d="M-408.29,98.486A420,420,0,0,1,-409.924,91.444L-146.402,32.658A150,150,0,0,0,-145.818,35.174Z" stroke="none"></path>
                <path d="M-412.829,77.279A420,420,0,0,1,-414.098,70.162L-147.892,25.058A150,150,0,0,0,-147.439,27.6Z" stroke="none"></path>
                <path d="M-414.098,70.162A420,420,0,0,1,-415.245,63.023L-148.302,22.508A150,150,0,0,0,-147.892,25.058Z" stroke="none"></path>
                <path d="M-415.245,63.023A420,420,0,0,1,-416.268,55.866L-148.667,19.952A150,150,0,0,0,-148.302,22.508Z" stroke="none"></path>
                <path d="M-416.268,55.866A420,420,0,0,1,-417.168,48.693L-148.989,17.39A150,150,0,0,0,-148.667,19.952Z" stroke="none"></path>
                <path d="M-417.168,48.693A420,420,0,0,1,-417.944,41.504L-149.266,14.823A150,150,0,0,0,-148.989,17.39Z" stroke="none"></path>
            </clipPath>
            <path class="remainder" d="M-18.069,419.611A420,420,0,0,1,-418.597,34.304L-149.499,12.251A150,150,0,0,0,-6.453,149.861Z" fill="url(#remainder-pattern)" clip-path="url(#remainder-clip)" stroke="none"></path>
            <path class="remainder" d="M-18.069,419.611A420,420,0,0,1,-418.597,34.304L-149.499,12.251A150,150,0,0,0,-6.453,149.861Z" fill="url(#remainder-pattern-extra)" clip-path="url(#remainder-clip)" stroke="none"></path>
        </g>
    </g>
    <defs>
        <pattern id="remainder-pattern" width="73.6363636363" height="57.2727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <rect width="73.6363636363" height="57.2727272727" opacity="0.8" fill="rgb(213, 94, 0)"></rect>
        </pattern>
    </defs>
    <defs>
        <pattern id="remainder-pattern-extra" width="73.6363636363" height="57.2727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <text x="0" y="49.09" style="font-size: 60.00px" opacity="0.9" fill="black">
                12
            </text>
        </pattern>
    </defs>
</svg>"
`;

exports[`drawRemainder > start of Q4 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder">
            <clipPath id="remainder-clip">
                <path d="M-419.343,-23.485A420,420,0,0,1,-418.876,-30.7L-149.599,-10.964A150,150,0,0,0,-149.765,-8.388Z" stroke="none"></path>
                <path d="M-418.876,-30.7A420,420,0,0,1,-418.286,-37.906L-149.388,-13.538A150,150,0,0,0,-149.599,-10.964Z" stroke="none"></path>
                <path d="M-418.286,-37.906A420,420,0,0,1,-417.572,-45.1L-149.133,-16.107A150,150,0,0,0,-149.388,-13.538Z" stroke="none"></path>
                <path d="M-417.572,-45.1A420,420,0,0,1,-416.733,-52.281L-148.833,-18.672A150,150,0,0,0,-149.133,-16.107Z" stroke="none"></path>
                <path d="M-416.733,-52.281A420,420,0,0,1,-415.772,-59.447L-148.49,-21.231A150,150,0,0,0,-148.833,-18.672Z" stroke="none"></path>
                <path d="M-413.479,-73.723A420,420,0,0,1,-412.149,-80.83L-147.196,-28.868A150,150,0,0,0,-147.671,-26.33Z" stroke="none"></path>
                <path d="M-412.149,-80.83A420,420,0,0,1,-410.696,-87.912L-146.677,-31.397A150,150,0,0,0,-147.196,-28.868Z" stroke="none"></path>
                <path d="M-410.696,-87.912A420,420,0,0,1,-409.122,-94.969L-146.115,-33.917A150,150,0,0,0,-146.677,-31.397Z" stroke="none"></path>
                <path d="M-409.122,-94.969A420,420,0,0,1,-407.427,-101.997L-145.51,-36.427A150,150,0,0,0,-146.115,-33.917Z" stroke="none"></path>
                <path d="M-407.427,-101.997A420,420,0,0,1,-405.611,-108.995L-144.861,-38.927A150,150,0,0,0,-145.51,-36.427Z" stroke="none"></path>
                <path d="M-401.619,-122.892A420,420,0,0,1,-399.444,-129.787L-142.658,-46.353A150,150,0,0,0,-143.435,-43.89Z" stroke="none"></path>
                <path d="M-399.444,-129.787A420,420,0,0,1,-397.15,-136.644L-141.839,-48.801A150,150,0,0,0,-142.658,-46.353Z" stroke="none"></path>
                <path d="M-397.15,-136.644A420,420,0,0,1,-394.74,-143.46L-140.978,-51.236A150,150,0,0,0,-141.839,-48.801Z" stroke="none"></path>
                <path d="M-394.74,-143.46A420,420,0,0,1,-392.212,-150.233L-140.076,-53.655A150,150,0,0,0,-140.978,-51.236Z" stroke="none"></path>
                <path d="M-392.212,-150.233A420,420,0,0,1,-389.568,-156.962L-139.131,-56.058A150,150,0,0,0,-140.076,-53.655Z" stroke="none"></path>
                <path d="M-383.934,-170.279A420,420,0,0,1,-380.946,-176.862L-136.052,-63.165A150,150,0,0,0,-137.119,-60.814Z" stroke="none"></path>
                <path d="M-380.946,-176.862A420,420,0,0,1,-377.845,-183.394L-134.945,-65.498A150,150,0,0,0,-136.052,-63.165Z" stroke="none"></path>
                <path d="M-377.845,-183.394A420,420,0,0,1,-374.632,-189.87L-133.797,-67.811A150,150,0,0,0,-134.945,-65.498Z" stroke="none"></path>
                <path d="M-374.632,-189.87A420,420,0,0,1,-371.308,-196.291L-132.61,-70.104A150,150,0,0,0,-133.797,-67.811Z" stroke="none"></path>
                <path d="M-371.308,-196.291A420,420,0,0,1,-367.875,-202.653L-131.384,-72.376A150,150,0,0,0,-132.61,-70.104Z" stroke="none"></path>
                <path d="M-360.681,-215.196A420,420,0,0,1,-356.923,-221.373L-127.473,-79.062A150,150,0,0,0,-128.815,-76.856Z" stroke="none"></path>
                <path d="M-356.923,-221.373A420,420,0,0,1,-353.06,-227.484L-126.093,-81.244A150,150,0,0,0,-127.473,-79.062Z" stroke="none"></path>
                <path d="M-353.06,-227.484A420,420,0,0,1,-349.092,-233.527L-124.676,-83.403A150,150,0,0,0,-126.093,-81.244Z" stroke="none"></path>
                <path d="M-349.092,-233.527A420,420,0,0,1,-345.02,-239.502L-123.221,-85.536A150,150,0,0,0,-124.676,-83.403Z" stroke="none"></path>
                <path d="M-345.02,-239.502A420,420,0,0,1,-340.846,-245.405L-121.731,-87.645A150,150,0,0,0,-123.221,-85.536Z" stroke="none"></path>
                <path d="M-332.197,-256.992A420,420,0,0,1,-327.724,-262.672L-117.044,-93.812A150,150,0,0,0,-118.642,-91.783Z" stroke="none"></path>
                <path d="M-327.724,-262.672A420,420,0,0,1,-323.154,-268.275L-115.412,-95.812A150,150,0,0,0,-117.044,-93.812Z" stroke="none"></path>
                <path d="M-323.154,-268.275A420,420,0,0,1,-318.488,-273.798L-113.746,-97.785A150,150,0,0,0,-115.412,-95.812Z" stroke="none"></path>
                <path d="M-318.488,-273.798A420,420,0,0,1,-313.728,-279.239L-112.046,-99.728A150,150,0,0,0,-113.746,-97.785Z" stroke="none"></path>
                <path d="M-313.728,-279.239A420,420,0,0,1,-308.875,-284.598L-110.313,-101.642A150,150,0,0,0,-112.046,-99.728Z" stroke="none"></path>
                <path d="M-298.896,-295.062A420,420,0,0,1,-293.772,-300.163L-104.919,-107.201A150,150,0,0,0,-106.748,-105.379Z" stroke="none"></path>
                <path d="M-293.772,-300.163A420,420,0,0,1,-288.562,-305.175L-103.058,-108.991A150,150,0,0,0,-104.919,-107.201Z" stroke="none"></path>
                <path d="M-288.562,-305.175A420,420,0,0,1,-283.266,-310.097L-101.167,-110.749A150,150,0,0,0,-103.058,-108.991Z" stroke="none"></path>
                <path d="M-283.266,-310.097A420,420,0,0,1,-277.887,-314.927L-99.245,-112.474A150,150,0,0,0,-101.167,-110.749Z" stroke="none"></path>
                <path d="M-277.887,-314.927A420,420,0,0,1,-272.424,-319.664L-97.294,-114.166A150,150,0,0,0,-99.245,-112.474Z" stroke="none"></path>
                <path d="M-261.26,-328.852A420,420,0,0,1,-255.56,-333.3L-91.272,-119.036A150,150,0,0,0,-93.307,-117.447Z" stroke="none"></path>
                <path d="M-255.56,-333.3A420,420,0,0,1,-249.785,-337.65L-89.209,-120.589A150,150,0,0,0,-91.272,-119.036Z" stroke="none"></path>
                <path d="M-249.785,-337.65A420,420,0,0,1,-243.936,-341.899L-87.12,-122.107A150,150,0,0,0,-89.209,-120.589Z" stroke="none"></path>
                <path d="M-243.936,-341.899A420,420,0,0,1,-238.015,-346.048L-85.005,-123.588A150,150,0,0,0,-87.12,-122.107Z" stroke="none"></path>
                <path d="M-238.015,-346.048A420,420,0,0,1,-232.023,-350.093L-82.865,-125.033A150,150,0,0,0,-85.005,-123.588Z" stroke="none"></path>
                <path d="M-219.835,-357.873A420,420,0,0,1,-213.642,-361.604L-76.301,-129.144A150,150,0,0,0,-78.512,-127.812Z" stroke="none"></path>
                <path d="M-213.642,-361.604A420,420,0,0,1,-207.386,-365.228L-74.066,-130.438A150,150,0,0,0,-76.301,-129.144Z" stroke="none"></path>
                <path d="M-207.386,-365.228A420,420,0,0,1,-201.068,-368.743L-71.81,-131.694A150,150,0,0,0,-74.066,-130.438Z" stroke="none"></path>
                <path d="M-201.068,-368.743A420,420,0,0,1,-194.691,-372.15L-69.533,-132.911A150,150,0,0,0,-71.81,-131.694Z" stroke="none"></path>
                <path d="M-194.691,-372.15A420,420,0,0,1,-188.256,-375.446L-67.234,-134.088A150,150,0,0,0,-69.533,-132.911Z" stroke="none"></path>
                <path d="M-175.221,-381.703A420,420,0,0,1,-168.625,-384.663L-60.223,-137.38A150,150,0,0,0,-62.579,-136.323Z" stroke="none"></path>
                <path d="M-168.625,-384.663A420,420,0,0,1,-161.979,-387.509L-57.85,-138.396A150,150,0,0,0,-60.223,-137.38Z" stroke="none"></path>
                <path d="M-161.979,-387.509A420,420,0,0,1,-155.284,-390.239L-55.459,-139.371A150,150,0,0,0,-57.85,-138.396Z" stroke="none"></path>
                <path d="M-155.284,-390.239A420,420,0,0,1,-148.544,-392.855L-53.051,-140.305A150,150,0,0,0,-55.459,-139.371Z" stroke="none"></path>
                <path d="M-148.544,-392.855A420,420,0,0,1,-141.76,-395.353L-50.628,-141.198A150,150,0,0,0,-53.051,-140.305Z" stroke="none"></path>
                <path d="M-128.067,-399.999A420,420,0,0,1,-121.163,-402.144L-43.272,-143.623A150,150,0,0,0,-45.738,-142.857Z" stroke="none"></path>
                <path d="M-121.163,-402.144A420,420,0,0,1,-114.222,-404.17L-40.794,-144.346A150,150,0,0,0,-43.272,-143.623Z" stroke="none"></path>
                <path d="M-114.222,-404.17A420,420,0,0,1,-107.248,-406.076L-38.303,-145.027A150,150,0,0,0,-40.794,-144.346Z" stroke="none"></path>
                <path d="M-107.248,-406.076A420,420,0,0,1,-100.243,-407.862L-35.801,-145.665A150,150,0,0,0,-38.303,-145.027Z" stroke="none"></path>
                <path d="M-100.243,-407.862A420,420,0,0,1,-93.207,-409.527L-33.288,-146.26A150,150,0,0,0,-35.801,-145.665Z" stroke="none"></path>
                <path d="M-79.055,-412.493A420,420,0,0,1,-71.943,-413.792L-25.694,-147.783A150,150,0,0,0,-28.234,-147.319Z" stroke="none"></path>
                <path d="M-71.943,-413.792A420,420,0,0,1,-64.81,-414.97L-23.146,-148.203A150,150,0,0,0,-25.694,-147.783Z" stroke="none"></path>
                <path d="M-64.81,-414.97A420,420,0,0,1,-57.657,-416.024L-20.592,-148.58A150,150,0,0,0,-23.146,-148.203Z" stroke="none"></path>
                <path d="M-57.657,-416.024A420,420,0,0,1,-50.487,-416.954L-18.031,-148.912A150,150,0,0,0,-20.592,-148.58Z" stroke="none"></path>
                <path d="M-50.487,-416.954A420,420,0,0,1,-43.303,-417.762L-15.465,-149.201A150,150,0,0,0,-18.031,-148.912Z" stroke="none"></path>
            </clipPath>
            <path class="remainder" d="M-419.685,-16.263A420,420,0,0,1,-36.105,-418.445L-12.895,-149.445A150,150,0,0,0,-149.888,-5.808Z" fill="url(#remainder-pattern)" clip-path="url(#remainder-clip)" stroke="none"></path>
            <path class="remainder" d="M-419.685,-16.263A420,420,0,0,1,-36.105,-418.445L-12.895,-149.445A150,150,0,0,0,-149.888,-5.808Z" fill="url(#remainder-pattern-extra)" clip-path="url(#remainder-clip)" stroke="none"></path>
        </g>
    </g>
    <defs>
        <pattern id="remainder-pattern" width="73.6363636363" height="57.2727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <rect width="73.6363636363" height="57.2727272727" opacity="0.8" fill="rgb(213, 94, 0)"></rect>
        </pattern>
    </defs>
    <defs>
        <pattern id="remainder-pattern-extra" width="73.6363636363" height="57.2727272727" patternUnits="userSpaceOnUse" patternTransform="rotate(20)">
            <text x="0" y="49.09" style="font-size: 60.00px" opacity="0.9" fill="black">
                12
            </text>
        </pattern>
    </defs>
</svg>"
`;

exports[`drawRemainderLabel > last day of Q1 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder-label">
            <text x="-391.5" y="13.5" style="font-size: 40.91px; dominant-baseline: hanging; text-anchor: left" stroke="none">
                0 weeks left
            </text>
        </g>
    </g>
</svg>"
`;

exports[`drawRemainderLabel > last day of Q2 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder-label">
            <text x="-391.5" y="13.5" style="font-size: 40.91px; dominant-baseline: hanging; text-anchor: left" stroke="none">
                0 weeks left
            </text>
        </g>
    </g>
</svg>"
`;

exports[`drawRemainderLabel > last day of Q3 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder-label">
            <text x="171" y="13.5" style="font-size: 40.91px; dominant-baseline: hanging; text-anchor: left" stroke="none">
                0 weeks left
            </text>
        </g>
    </g>
</svg>"
`;

exports[`drawRemainderLabel > last day of Q4 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder-label">
            <text x="171" y="13.5" style="font-size: 40.91px; dominant-baseline: hanging; text-anchor: left" stroke="none">
                0 weeks left
            </text>
        </g>
    </g>
</svg>"
`;

exports[`drawRemainderLabel > start of Q1 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder-label">
            <text x="-391.5" y="13.5" style="font-size: 40.91px; dominant-baseline: hanging; text-anchor: left" stroke="none">
                12 weeks left
            </text>
        </g>
    </g>
</svg>"
`;

exports[`drawRemainderLabel > start of Q2 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder-label">
            <text x="-391.5" y="13.5" style="font-size: 40.91px; dominant-baseline: hanging; text-anchor: left" stroke="none">
                12 weeks left
            </text>
        </g>
    </g>
</svg>"
`;

exports[`drawRemainderLabel > start of Q3 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder-label">
            <text x="171" y="13.5" style="font-size: 40.91px; dominant-baseline: hanging; text-anchor: left" stroke="none">
                12 weeks left
            </text>
        </g>
    </g>
</svg>"
`;

exports[`drawRemainderLabel > start of Q4 1`] = `
"<svg id="clock" width="1000" height="1000">
    <g transform="translate(500 500)">
        <g id="remainder-label">
            <text x="171" y="13.5" style="font-size: 40.91px; dominant-baseline: hanging; text-anchor: left" stroke="none">
                12 weeks left
            </text>
        </g>
    </g>
</svg>"
`;
